--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
