--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
+    "react-use": "^17.4.0",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
@@ -33,7 +34,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "lint": "eslint --ext .ts,.tsx src/"
   },
   "eslintConfig": {
     "extends": [
@@ -54,6 +56,14 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.48.0",
+    "@typescript-eslint/parser": "^5.48.0",
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "prettier": "^2.8.1",
     "sass": "^1.57.1"
   }
 }
