--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
+    "sass": "^1.57.1",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
   },
@@ -55,7 +55,5 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "sass": "^1.57.1"
-  }
+  "devDependencies": {}
 }
