--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
-    "lint": "eslint --ext .ts,.tsx src/"
+    "lint": "eslint --ext .ts,.tsx --ignore-pattern *.d.ts src/"
   },
   "eslintConfig": {
     "extends": [
