--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-redux": "^7.1.25",
     "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9",
     "axios": "^1.2.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
@@ -34,6 +35,9 @@
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
     "react-use": "^17.4.0",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-thunk": "^2.4.2",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
   },
