--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react"
   },
-  "include": ["src", "src/Components/Gnb.tsx"]
+  "include": ["src", "**/*.tsx", "**/*.ts", "src/Components/Gnb.tsx"]
 }
