--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
+    "type-check": "^0.4.0",
     "typescript": "^4.9.4",
     "web-vitals": "^2.1.0"
   },
