--- a/.github/workflows/ci-back.yaml
+++ b/.github/workflows/ci-back.yaml
@@ -10,7 +10,6 @@ on:
     paths:
       - back/**
   
-
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
@@ -20,6 +19,9 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: back
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
