👷 add CD to frontend

--- a/back/package.json
+++ b/back/package.json
@@ -7,9 +7,10 @@
     "start": "node build/app.js",
     "build": "tsc",
     "dev": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/app.ts",
-    "pm2:start:dev": "yarn; yarn build; pm2 --name dev start \"yarn start\"",
-    "pm2:restart:dev": "yarn; yarn build; pm2 restart dev",
-    "type-check": "tsc --noEmit"
+    "pm2:start:dev": "yarn; yarn build; pm2 --name back-dev start \"yarn start\"",
+    "pm2:restart:dev": "yarn; yarn build; pm2 restart back-dev",
+    "type-check": "tsc --noEmit",
+    "style-check": "prettier --check 'src/**/*.{tsx,ts}'"
   },
   "repository": {
     "type": "git",
