--- a/front/package.json
+++ b/front/package.json
@@ -13,20 +13,9 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
-    "@types/draft-js": "^0.11.10",
-    "@types/draftjs-to-html": "^0.8.1",
-    "@types/jest": "^29.2.5",
-    "@types/node": "^18.11.18",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@types/react-draft-wysiwyg": "^1.13.4",
-    "@types/react-redux": "^7.1.25",
-    "@types/react-router-dom": "^5.3.3",
-    "@types/redux-logger": "^3.0.9",
     "bson-objectid": "^2.0.4",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
-    "eslint-config-react-app": "^7.0.1",
     "html-to-draftjs": "^1.5.0",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
@@ -49,7 +38,9 @@
     "eject": "react-scripts eject",
     "type-check": "tsc --noEmit",
     "lint": "eslint --ext .ts,.tsx --ignore-pattern *.d.ts src/",
-    "style-check": "prettier --check 'src/**/*.{tsx,ts}'"
+    "style-check": "prettier --check 'src/**/*.{tsx,ts}'",
+    "pm2:start:dev": "yarn; pm2 --name front-dev start \"yarn start\"",
+    "pm2:restart:dev": "yarn; pm2 restart front-dev"
   },
   "eslintConfig": {
     "extends": [
@@ -70,14 +61,24 @@
     ]
   },
   "devDependencies": {
+    "@types/draft-js": "^0.11.10",
+    "@types/draftjs-to-html": "^0.8.1",
+    "@types/jest": "^29.2.5",
+    "@types/node": "^18.11.18",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.10",
+    "@types/react-draft-wysiwyg": "^1.13.4",
+    "@types/react-redux": "^7.1.25",
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-config-react-app": "^7.0.1",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "prettier": "^2.8.1",
-    "sass": "^1.57.1"
+    "prettier": "^2.8.1"
   }
 }
