--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,10 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
-.env*.local
+# env files
+.env.development
+.env.production
+!.env.local
 
 # vercel
 .vercel
