--- a/.github/workflows/cd-prod.yaml
+++ b/.github/workflows/cd-prod.yaml
@@ -5,7 +5,7 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches:
-      - develop
+      - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -26,7 +26,7 @@ jobs:
           script_stop: true
           script: |
             cd kuiz
-            git checkout develop
+            git checkout main
             git pull
             yarn install
-            yarn pm2:restart:dev
+            yarn pm2:restart:prod
