--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "style-check": "prettier --check 'src/**/*.{tsx,ts}'",
+    "pm2:start:prod": "pm2 start npm --name prod -- run start",
+    "pm2:restart:prod": "pm2 restart prod",
     "pm2:start:dev": "pm2 start npm --name dev -- run dev",
     "pm2:restart:dev": "pm2 restart dev"
   },
