--- a/.github/workflows/cd-prod.yaml
+++ b/.github/workflows/cd-prod.yaml
@@ -29,4 +29,5 @@ jobs:
             git checkout main
             git pull
             yarn install
+            yarn build
             yarn pm2:restart:prod
