--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "PORT=5000 next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "PORT=3000 next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "style-check": "prettier --check 'src/**/*.{tsx,ts}'",
+    "pm2:start:prod": "pm2 start npm --name prod -- run start",
+    "pm2:restart:prod": "pm2 restart prod",
     "pm2:start:dev": "pm2 start npm --name dev -- run dev",
     "pm2:restart:dev": "pm2 restart dev"
   },
