--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=5000 next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "PORT=3000 next start",
+    "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "style-check": "prettier --check 'src/**/*.{tsx,ts}'",
-    "pm2:start:prod": "pm2 start npm --name prod -- run start",
+    "pm2:start:prod": "PORT=3000 pm2 start npm --name prod -- run start",
     "pm2:restart:prod": "pm2 restart prod",
-    "pm2:start:dev": "pm2 start npm --name dev -- run dev",
+    "pm2:start:dev": "PORT=5000 pm2 start npm --name dev -- run start",
     "pm2:restart:dev": "pm2 restart dev"
   },
   "dependencies": {
