--- a/package.json
+++ b/package.json
@@ -3,21 +3,20 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=5000 next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "PORT=3000 next start",
+    "start": "next start",
     "lint": "next lint",
     "type-check": "tsc --noEmit",
     "style-check": "prettier --check 'src/**/*.{tsx,ts}'",
-    "pm2:start:prod": "pm2 start npm --name prod -- run start",
+    "pm2:start:prod": "PORT=3000 pm2 start npm --name prod -- run start",
     "pm2:restart:prod": "pm2 restart prod",
-    "pm2:start:dev": "pm2 start npm --name dev -- run dev",
+    "pm2:start:dev": "PORT=5000 pm2 start npm --name dev -- run start",
     "pm2:restart:dev": "pm2 restart dev"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
