--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^7.0.0",
     "next": "13.2.1",
     "next-auth": "^4.19.2",
+    "openai": "^3.2.1",
     "pm2": "^5.2.2",
     "prettier": "^2.8.4",
     "react": "18.2.0",
