--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^8.0.5",
+    "react-use": "^17.4.0",
     "typescript": "4.9.5"
   }
 }
