--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/bad-words": "^3.0.1",
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "bad-words": "^3.0.4",
     "bson-objectid": "^2.0.4",
     "date-fns": "^2.29.3",
     "date-fns-tz": "^2.0.0",
