--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns-tz": "^2.0.0",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
+    "lodash": "^4.17.21",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.0",
     "next": "13.2.1",
@@ -42,5 +43,8 @@
     "react-redux": "^8.0.5",
     "react-use": "^17.4.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.194"
   }
 }
